--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bytemd/plugin-breaks": "^1.22.0",
+    "@bytemd/plugin-frontmatter": "^1.22.0",
+    "@bytemd/plugin-gfm": "^1.22.0",
+    "@bytemd/plugin-highlight": "^1.22.0",
+    "@bytemd/react": "^1.22.0",
     "@gsap/react": "^2.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -15,6 +20,7 @@
     "axios": "^1.11.0",
     "craco-less": "^3.0.1",
     "gsap": "^3.13.0",
+    "highlight.js": "^11.11.1",
     "less": "^4.4.0",
     "less-loader": "^12.3.0",
     "react": "^18.3.1",
